docs: slim down README (604→121 lines) and create CHANGELOG from git history
README changes:
- Remove: verbose API list, detailed project tree, Docker troubleshooting, dev specs, security details, old changelog
- Keep: project overview, tech stack, quick start, core features, Docker basics, structure, contribution guide
- Add link to CHANGELOG.md in footer

CHANGELOG.md:
- New file generated from actual git commit history
- Grouped by date/sprint with feature summaries
- Covers full history from 2026-04-20 initial commit to 2026-06-01